--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "watchify": "^3.3.0"
   },
   "dependencies": {
+    "flux": "^2.0.3",
     "react": "^0.13.3",
     "underscore": "^1.8.3"
   }
