--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactSandbox",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +23,7 @@
   "dependencies": {
     "flux": "^2.0.3",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "underscore": "^1.8.3"
   }
 }
