--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "flux": "^2.0.3",
     "react": "^0.13.3",
+    "react-bootstrap": "^0.24.0",
     "react-router": "^0.13.3",
     "underscore": "^1.8.3"
   }
