--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "flux": "^2.0.3",
+    "moment": "^2.10.3",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.0",
     "react-bootstrap-datetimepicker": "0.0.18",
+    "react-date-picker": "^2.1.9",
     "react-router": "^0.13.3",
     "tcomb-form": "^0.6.3",
     "tcomb-validation": "^2.0.0",
