--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "flux": "^2.0.3",
     "moment": "^2.10.3",
+    "object-assign": "^3.0.0",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.0",
     "react-bootstrap-datetimepicker": "0.0.18",
