--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap-datetimepicker": "0.0.18",
     "react-date-picker": "^2.1.9",
     "react-router": "^0.13.3",
+    "react-slick": "^0.6.6",
     "tcomb-form": "^0.6.3",
     "tcomb-validation": "^2.0.0",
     "underscore": "^1.8.3"
