--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.10.3",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
+    "react-async": "^2.1.0",
     "react-bootstrap": "^0.24.0",
     "react-bootstrap-datetimepicker": "0.0.18",
     "react-date-picker": "^2.1.9",
