--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.1",
+    "gulp-jsx": "^2.0.0",
     "gulp-react": "^3.0.1",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "1.1.0",
