--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browserify": "^11.0.0",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-html-replace": "^1.5.1",
-    "gulp-jsx": "^2.0.0",
-    "gulp-react": "^3.0.1",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "1.1.0",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"
+    "jasmine-core": "^2.2.0",
+    "jasmine-spec-reporter": "^2.1.0",
+    "karma": "^0.12.31",
+    "karma-browserify": "^4.1.2",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.7",
+    "karma-failed-reporter": "0.0.3",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-spec-reporter": "0.0.18",
+    "gulp-shell": "^0.4.0",
+    "dev-ip": "^1.0.1",
+    "stringify": "^3.1.0"
   },
   "dependencies": {
     "flux": "^2.0.3",
